2.1 (unreleased)
----------------

- Updated the lists of *empty elements*, *boolean attributes*, and
  *composed attributes* in ``webhelpers2.html.builder`` to include all
  of those listed in the current HTML 5.1 draft.

2.0 (2015-01-17)
----------------

No changes.


2.0rc3 (2015-01-13)
-------------------

- webhelpers.html.tags

  * Further changes to ``select``, ``Options``, ``Option`` and ``OptGroup``:

    + The ``options`` argument no longer accepts sequences representing
      value-label pairs or option groups. Instead you must build up an
      ``Options`` instance and pass it. You can still pass a simple list
      of strings though.
    + The ``Options``, ``Option``, and ``OptGroup`` clsses have incompatible
      changes.
    + Move the ``selected_values`` argument from the ``Options`` constructor
      to the ``Options.render`` method. Calling ``str(options)`` now renders all
      the options unselected. To render the options with some selected you
      must call the ``render`` method (or let ``select`` call it for you).
    + The 'Option.selected' attribute is deleted.
    + ``Option`` and ``OptGroup`` no longer generate their own HTML.
    + The 'SelectedValues' class is deleted.


2.0rc2 (2014-11-11)
-------------------

- Several unit tests and bugfixes contributed by Jeff Dairiki.

- webhelpers2.containers

  * [bug][py3k] Fix ``ordered_items`` when ``other_keys`` is set.

- webhelpers2.html.builder

  * Add "checked" and "selected" to list of boolean attributes.
  * [bug] Fix "unknown keyword args" reporting in ``HTML()``.

- webhelpers2.html.tags

  * Overhaul ``select``, ``Options``, ``Option``, and ``OptGroup``:

    + Users should test their calls to verify no incompatibilities have crept
      in , especially if using unusual argument types or edge cases.
    + The main helper is now ``Options``; ``select`` is now a wrapper around it.
    + The classes are now fully autonomous and render themselves as strings.