@@ -5,6 +5,11 @@
   *composed attributes* in ``webhelpers2.html.builder`` to include all
   of those listed in the current HTML 5.1 draft.
 
+- Switch doc theme source to 'pyramid-sphinx-themes' Python distribution.
+  This doesn't change the theme; it only changes where we get it from.
+  You can delete the 'docs/_themes' directory which the Makefile formerly
+  checked out.
+
 2.0 (2015-01-17)
 ----------------
 
